--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,10 @@
     <img alt="jovian logo" id="logo" src="https://i.imgur.com/m1wXjqw.png">
     </div> 
     <img id="banner" src="banner.jpg.jpg" alt="Banner" height="600" width="800"> 
-    <h1 >ABOUT JOVIAN</h1>
+    <h1 >WELCOME TO JOVIAN</h1>
 <div id="about">
     <div id="description"> <p style="margin-top: 0;">At Jovian, we're on a mission to build
-        the world's most highly reputed technical
+        the world's most  reputed technical
         university, and we're building it completely
         online. We offer several beginner friendly
         courses that are taken by 300,000+ registered
@@ -32,7 +32,7 @@
             </div>
             <div>
                 <li><a href="https://www.jovian.com/data-science-bootcamp"><h3>Datascience bootcamp</h3></a></li>
-                <span>Dive in to the field of data science  </span>
+                <span>Dive deep in to the field of data science  </span>
             </div>
             </ol>
          </p>
