--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <img alt="jovian logo" id="logo" src="https://i.imgur.com/m1wXjqw.png">
     </div> 
     <img id="banner" src="banner.jpg.jpg" alt="Banner" height="600" width="800"> 
-    <h1 >WELCOME TO JOVIAN</h1>
+    <h1 >ABOUT JOVIAN</h1>
 <div id="about">
     <div id="description"> <p style="margin-top: 0;">At Jovian, we're on a mission to build
         the world's most  reputed technical
