added title and favicon

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>
-        my first web page
-    </title>
+    <title>Jovian Careers</title>
+    <link rel="icon" href="/jovian_favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;600&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,600&display=swap" rel="stylesheet">
