updated success story

--- a/src/index.html
+++ b/src/index.html
@@ -99,20 +99,11 @@
    
    
     
-    <h2><u> Success stories</u></h2>
-    <p>“In the face of the COVID-19 crisis,
-        I have used my role as a virtual instructional
-        coach with BetterLesson to support hundreds
-        of teachers from around the US and Canada
-        in making the shift to distance learning. In the face of the COVID-19 crisis,
-        I have used my role as a virtual instructional
-        coach with BetterLesson to support hundreds
-        of teachers from around the US and Canada
-        in making the shift to distance learning.In the face of the COVID-19 crisis,
-        I have used my role as a virtual instructional
-        coach with BetterLesson to support hundreds
-        of teachers from around the US and Canada
-        in making the shift to distance learning.”</p>
+    <h2><u> Success story</u></h2>
+    <p>“120 points in terms of satisfaction - that's a dream score we received in a survey this year from one of our customers in
+         the telecommunications industry. We can proudly say: We have done a lot for this! In the past two years, we have managed
+          to continuously build up business with the customer through intensive customer care, with tact, conviction, through 
+          competence and cooperation in a spirit of partnership. ”</p>
         
     <div id="application">
      <h2>Submit Your Application</h2>
