--- a/src/index.html
+++ b/src/index.html
@@ -14,19 +14,25 @@
     <meta name="twitter:title" content="Jovian Careers">
     <meta name="twitter:description" content="Learn about job openings at Jovian and submit your application now">
     <meta name="twitter:image" content="/jovian_meta.png">
-    <title>Jovian Careers</title>
+
+
+    <title>Jovian Careers V2</title>
     <link rel="icon" href="/jovian_favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;600&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
-<body> 
+<body>
     <div id="navbar">
-    <img alt="jovian logo" id="logo" src="https://i.imgur.com/m1wXjqw.png">
-    </div> 
-    <img id="banner" src="banner.jpg.jpg" alt="Banner" height="600" width="800"> 
+
+        <img id="logo" alt="Jovian Logo" src="https://i.imgur.com/m1wXjqw.png" height="30" />
+    </div>
+    <img id="banner" src="banner.jpg" alt="Banner" height="240">
+
     <h1 >ABOUT JOVIAN</h1>
 <div id="about">
     <div id="description"> <p style="margin-top: 0;">At Jovian, we're on a mission to build
