--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
 
             <tr class="jobs-data-row">
                 <td>ML Engineer</td>
-                <td colspan="2">Remote</td>
+                <td colspan="2">Delhi</td>
                 <td>$80,000</td>
                 <td>Sep 19, 2022</td>
             </tr>
